# Multistage2015_for_OpenOrbiter

./: README.md
Orbitersdk/samples/Multistage2015_MFD/: CMakeLists.txt  Multistage2015_MFD.cpp  Multistage2015_MFD.h  Multistage2015_MFD.sln  Multistage2015_MFD.vcxproj  Multistage2015_MFD.vcxproj.filters
Orbitersdk/samples/Stage_dll_2010/: CMakeLists.txt  stage.cpp
sources/: .clangd  CMakeLists.txt
sources/Crawler/: CMakeLists.txt  Crawler.sln  Crawler.vcxproj  MS_Crawler.cpp  MS_Crawler.h
sources/EmptyModule/: CMakeLists.txt  EmptyModule.cpp  EmptyModule.h  EmptyModule.sln  EmptyModule.vcxproj
sources/MS_Camera/: CMakeLists.txt  MS_Camera.cpp  MS_Camera.h  MS_Camera.sln  MS_Camera.vcxproj
sources/MS_Hangar/: CMakeLists.txt  MS_Hangar.cpp  MS_Hangar.h  MS_Hangar.sln  MS_Hangar.vcxproj
sources/Multistage2015/: CMakeLists.txt  DevDlg.cpp  DevDlg.h  DevModeCtrl.cpp  DevModeCtrl.h  DeveloperDlg.rc  DeveloperEditor.h  Graph.cpp  Graph.h  Guidance.cpp  Multistage2015.cpp  Multistage2015.h  Multistage2015.sln  Multistage2015.vcproj  Multistage2015.vcxproj  Multistage2015_rec.aps  Multistage2015_rec.rc  OrbiterSoundSDK40.lib  Particles.cpp  Resources.aps  Resources.rc  WriteIni.cpp  WriteIni.h  parser.cpp  peg.cpp  resource.h  sources.code-workspace  test.cpp  test.h
sources/boom/: CMakeLists.txt  boom.cpp  boom.h  boom.sln  boom.sln.old  boom.vcproj  boom.vcxproj
